--- a/style.css
+++ b/style.css
@@ -21,6 +21,85 @@ body{
     color:aqua;
 }
 
+#p1Bar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    position: absolute;
+    top:43%;
+    left: 24%;
+    height: 50px;
+    width: 190px;
+    background-color: rgba(0, 0, 0, .6);
+    border-radius: 5px;
+}
+
+#p2Bar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    position: absolute;
+    top: 43%;
+    right: 24%;
+    height: 50px;
+    width: 190px;
+    background-color: rgba(0, 0, 0, .6);
+    border-radius: 5px;
+}
+
+#nameDisplay{
+color: ivory;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-weight: bold;
+}
+#p1Bar>#nameDisplay{
+    margin-left: 8px;
+}
+#p2Bar>#nameDisplay{
+    margin-right: 8px;
+}
+
+#hpBar{
+    height: 4px;
+    width: 150px;
+    border-radius: 10px;
+    border: 1px solid rgb(221, 220, 220);
+    background-color: rgb(116, 1, 1);
+}
+#p1Bar>#hpBar{
+    margin-left: 30px;
+}
+#p2Bar>#hpBar{
+    margin-right: 30px;
+}
+
+#p1HpLine{
+    height: 4px;
+    width: 90%;
+    border-radius: 10px;
+    background-color: rgb(3, 197, 3);
+}
+#p2HpLine{
+    height: 4px;
+    width: 90%;
+    border-radius: 10px;
+    background-color: rgb(3, 197, 3);
+}
+
+sub{
+    color: ivory;
+    font-size: 10px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#p1Bar>sub{
+    padding-left: 70%;
+}
+#p2Bar>sub{
+    padding-right: 70%;
+}
+
 #combatLine{
     position:sticky;
     top: 68vh;
@@ -31,8 +110,16 @@ body{
 #p1 img{
     margin-right: 70px;
     scale: 1.5;
+    transform: scaleX(-1)
 }
-
 #p2 img{
     scale: 1.5;
+}
+
+button{
+    position:absolute;
+    bottom: 27px;
+    right: 46.5%;
+    padding: 6px;
+    border-radius: 5px;
 }
